# carbon-emissions-intelligence-platform

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .coverage  .env  Dockerfile  alembic.ini  conftest.py  debug_imports.py  fix_remaining_issues.py  fix_validation_thresholds.py  pyproject.toml  pytest.ini
backend/alembic/: alembic.ini
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/endpoints/: emissions.py  esg_dashboard.py  esg_reports.py
backend/app/core/: __init__.py  auth.py  calculation_engine.py  config.py
backend/app/db/: __init__.py  database.py  models.py  session.py
backend/app/pipeline/: api_clients.py  ingestion.py  quality.py  transformers.py
backend/app/schemas/: emissions.py
backend/app/utils/: error_handler.py  rate_limiter.py
backend/requirements/: base.txt  dev.txt
backend/scripts/: load_sample_data.py  validate_models.py
backend/tests/: confest.py  conftest.py  copp  load_testing.py  run_working_tests.py  test_api_integration.py  test_calculations.py  test_clean_basic.py  test_compliance.py  test_data_pipeline.py  test_data_quality.py  test_e2e_workflows.py  test_error_handling.py  test_fixed_working.py  test_migrations.py  test_ml_models.py  test_model_performance.py  test_models.py  test_performance.py  test_predictions.py  test_report_generation.py  test_simple_working.py  test_working_compliance.py
backend/tests/integration/: test_emissions_integration.py
backend/tests/test_api/: test_emissions_api.py
backend/tests/unit/: test_emissions.py
(+61 files in other folders)
